--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,13 @@
 language: ruby
+bundler_args: --without yard guard benchmarks
+script: "bundle exec rake ci:metrics"
 rvm:
-  - ree
-  - 1.8.7
-  - 1.9.2
   - 1.9.3
   - 2.0.0
   - ruby-head
   - rbx
 matrix:
   include:
-    - rvm: jruby-18mode
-      env: JRUBY_OPTS="$JRUBY_OPTS --debug"  # for simplecov
     - rvm: jruby-19mode
       env: JRUBY_OPTS="$JRUBY_OPTS --debug"  # for simplecov
     - rvm: jruby-head
