--- a/config/reek.yml
+++ b/config/reek.yml
@@ -1,7 +1,8 @@
 ---
 Attribute:
   enabled: true
-  exclude: []
+  exclude:
+  - Memoizable::MethodBuilder
 BooleanParameter:
   enabled: true
   exclude: []
@@ -40,7 +41,8 @@ LongYieldList:
   max_params: 2
 NestedIterators:
   enabled: true
-  exclude: []
+  exclude:
+  - Memoizable::MethodBuilder#create_memoized_method
   max_allowed_nesting: 1
   ignore_iterators: []
 NilCheck:
@@ -52,7 +54,8 @@ RepeatedConditional:
   max_ifs: 1
 TooManyInstanceVariables:
   enabled: true
-  exclude: []
+  exclude:
+  - Memoizable::MethodBuilder
   max_instance_variables: 3
 TooManyMethods:
   enabled: true
@@ -61,8 +64,9 @@ TooManyMethods:
 TooManyStatements:
   enabled: true
   exclude:
+  - Memoizable::MethodBuilder#initialize
   - each
-  max_statements: 2
+  max_statements: 5
 UncommunicativeMethodName:
   enabled: true
   exclude: []
